--- a/WebRoot/css/index.css
+++ b/WebRoot/css/index.css
@@ -13,6 +13,7 @@ img{display:block;border:0px;}
 #header h1{font-size:24px;color:#664666;padding:5px 0 5px 10px;font-weight:600;}
 #header p{font-size:18px;color:#DB5E5E;font-weight:500;} 
 #nav{width:900px;margin:20px auto;}
+#test{margin:300px auto;}
 #nav ul li{width:120px;height:30px;line-height:30px;float:left;text-align:center;margin:0px 2px 0px 0px;}
 #nav ul li a{color:#506F70;font-size:16px;width:90px;height:30px;display:block;}
 #nav ul li input{color:#506F70;font-size:16px;width:90px;height:28px;display:block;border-radius: 6px;}
@@ -33,7 +34,9 @@ color:#D242DF;font-size:18px;margin-left:5px;}
 #login form{ width: 300px;margin: 8px;height: auto;}
 #login_d{margin: 10px auto;}
 
-/*文章*/
+
+.my_reply{padding-left:20px;}
+.order-and-search form{margin:10px 10px 10px 10px;}
 #c_left .content_text{width:730px;margin-top:5px;}
 #c_left .content_text .wz{width:725px;margin:5px 0px 10px 0px;color:#1D1A1A;}
 .wz h3{width:300px;height:30px;overflow:hidden;line-height:30px;font-size:17px;font-weight:500;padding-left:5px;color:#325EBD;}
@@ -42,14 +45,14 @@ color:#D242DF;font-size:18px;margin-left:5px;}
 .wz dl{width:840px;margin-top:3px;}
 .wz dl dt{float:left;width:204px;height:127px;margin-left:5px;display:block;border:1px solid #ccc;}
 .wz dl dt img{padding:2px;}
-.wz dl dd{float:left;width:700px;overflow:hidden;margin-left:0px;}
-.wz dl dd .dd_text_1{ margin-left:26px;width:650px;height:80px;display:block;overflow:hidden;text-indent: 25px;}
+.wz dl dd{float:left;width: 100%;overflow:hidden;margin-left:0px;padding-bottom: 20px;}
+.wz dl dd .dd_text_1{padding-top:25px; margin-left:26px;width:650px;height:80px;display:block;overflow:hidden;text-indent: 25px;}
 .wz dl dd .dd_text_1 textarea{width: 600px;height: 50px;line-height: 22px;margin-left: 4px;color: #325EBD;border-radius: 5px;}
 .wz dl dd .dd_text_2{line-height:30px;}
 .wz dl dd .dd_text_2 span{padding-left:15px;}
 .wz dl dd .dd_text_2 .author{display:block;width:100px;height:30px; 
 background:url("../images/tx.jpg") 5px 7px no-repeat;padding-left:25px;margin-left:20px;}
-.wz dl dd .dd_text_2 .sj{display:block;width:120px;height:30px;
+.wz dl dd .dd_text_2 .sj{display:block;width:200px;height:30px;
 background:url("../images/sj.jpg") 5px 7px no-repeat;padding-left:25px;}
 .wz dl dd .dd_text_2 .fl{display:block;width:110px;heigt:30px;text-align:center;}
 .wz dl dd .dd_text_2 .fl a{color:#1D1718;}
